<resources>
    <string name="app_name">Anime Quiz</string>
    <string name="logo_image">TODO</string>
    <string name="mbutton">Button</string>
    <string name="begin">Begin</string>
    <string name="question_no_1">Question No: 1</string>
    <string name="goku">Goku</string>
    <string name="qn1">Name the character</string>
    <string name="trunks">Trunks</string>
    <string name="gohan">Gohan</string>
    <string name="next1">next</string>
    <string name="broly">Broly</string>
    <string name="qn1pic">qn1pic</string>
    <string name="qn2pic">TODO</string>
    <string name="next">next</string>
    <string name="tokyo_ghoul">Tokyo Ghoul</string>
    <string name="attack_on_titan">Attack On Titan</string>
    <string name="psycho_pass">Psycho Pass</string>
    <string name="seraph_of_the_end">Seraph Of the End</string>
    <string name="qn2">Name the anime</string>
    <string name="qnn2">Question No:2</string>
    <string name="qn3pic">qn3pic</string>
    <string name="saitama">Saitama</string>
    <string name="dot_pixis">Dot Pixis</string>
    <string name="andrew_gilbert">Andrew Gilbert</string>
    <string name="hanzo">Hanzo</string>
    <string name="qn3">Name the character</string>
    <string name="qnn3">Question No:3</string>
    <string name="nq3">next</string>
    <string name="qnno7">What is the name of the supernatural ability that Lelounch gains from C.C. that lets him control others?</string>
    <string name="qn7pic">qn7pic</string>
    <string name="question_no_4">Question No:4</string>
    <string name="nexttoqn5">next</string>
    <string name="sharingan">Sharingan</string>
    <string name="all_for_one">All for One</string>
    <string name="kamui">Kamui</string>
    <string name="geass">Geass</string>
    <string name="question_no_5">Question No:5</string>
    <string name="nexttoqn6">Next</string>
    <string name="qnofqn5">Name the character</string>
    <string name="qnpicof5">qnpicof5</string>
    <string name="monkey_d_luffy">Monkey D Luffy</string>
    <string name="naruto">Naruto</string>
    <string name="itachi_uchiha">Itachi Uchiha</string>
    <string name="kakashi_hatake">Kakashi Hatake</string>
    <string name="question_no_6">Question No:6</string>
    <string name="qndesc6">Name the anime</string>
    <string name="kimi_no_na_wa">Kimi No Na Wa</string>
    <string name="koe_no_katachi">Koe no Katachi</string>
    <string name="starry_sky">Starry Sky</string>
    <string name="jutsu_kaisen">Jutsu Kaisen</string>
    <string name="picofqn6">picofqn6</string>
    <string name="question_no_7">Question No:7</string>
    <string name="qndecof7">Who is the author of One Piece</string>
    <string name="kentaro_miura">Kentaro Miura</string>
    <string name="qnpicof7">qnpicof7</string>
    <string name="hayao_miyazaki">Hayao Miyazaki</string>
    <string name="akira_toriyama">Akira Toriyama</string>
    <string name="eiichiro_oda">Eiichiro Oda</string>
    <string name="question_no_8">Question No:8</string>
    <string name="qndesc8">What is the real name of L</string>
    <string name="levi">Levi</string>
    <string name="lan_fan">Lan Fan</string>
    <string name="lawrence">Lawrence</string>
    <string name="l_lawliet">L Lawliet</string>
    <string name="picofqn8">picofqn8</string>
    <string name="question_no_9">Question No:9</string>
    <string name="qndescof9">What is the name of Killua\'s sister</string>
    <string name="silva_zoldyck">Silva Zoldyck</string>
    <string name="illumi_zoldyck">Illumi Zoldyck</string>
    <string name="kalluto_zoldyck">Kalluto Zoldyck</string>
    <string name="alluka_zoldyck">Alluka Zoldyck</string>
    <string name="picofqn9">picofqn9</string>
    <string name="finish">finish</string>
    <string name="question_no_10">Question No:10</string>
    <string name="qndescof10">Who is the creator of Demon Slayer</string>
    <string name="masashi_kishimoto">Masashi Kishimoto</string>
    <string name="tite_kubo">Tite Kubo</string>
    <string name="hiro_mashima">Hiro Mashima</string>
    <string name="koyoharu_gotouge">Koyoharu Gotouge</string>
    <string name="picofqn10">picofqn10</string>
    <string name="congratulations">CONGRATULATIONS</string>
    <string name="nicopic">nicopic</string>
    <string name="you_scored">YOU SCORED</string>
    <string name="_100_100">100/100</string>
    <string name="try_again">Try Again</string>
    <string name="exit">exit</string>
    <string name="anime_guesser">ANIME GUESSER</string>
    <string name="anime_quiz">ANIME QUIZ</string>
</resources>