<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6C90E"
    tools:context=".EleventhActivity">

    <Button
        android:id="@+id/button10"
        android:layout_width="169dp"
        android:layout_height="58dp"
        android:backgroundTint="#E88304"
        android:text="@string/finish"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <TextView
        android:id="@+id/qnn10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/question_no_10"
        android:textColor="#151414"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/qnc10"
        android:layout_width="403dp"
        android:layout_height="78dp"
        android:fontFamily="@font/acme"
        android:text="@string/qndescof10"
        android:textColor="#0B0A0A"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <RadioGroup
        android:id="@+id/layout10"
        android:layout_width="343dp"
        android:layout_height="188dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.300"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" >

        <RadioButton
            android:id="@+id/radioButton37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/masashi_kishimoto"
            android:textColor="#0E0D0D"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/radioButton38"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/tite_kubo"
            android:textColor="#0E0D0D"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/radioButton39"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/hiro_mashima"
            android:textColor="#0E0D0D"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/radioButton40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/koyoharu_gotouge"
            android:textColor="#0E0D0D"
            android:textSize="28sp"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="378dp"
        android:layout_height="232dp"
        android:contentDescription="@string/picofqn10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31"
        app:srcCompat="@drawable/qn_10" />
</androidx.constraintlayout.widget.ConstraintLayout>